Fixed bug #72569 DOTNET/COM array parameters broke in PHP7